--- a/index.html
+++ b/index.html
@@ -193,9 +193,26 @@
 
   </div>
 </div>
+<div class="container">
+  <div class="row my-5">
+    <div class="offset-lg-3"></div>
+    <div class="col-lg-6">
+      <form class="text-center" action="#!">
+          <input type="text" class="form-control mb-3" placeholder="Nombre">
+          <input type="number" class="form-control mb-3" placeholder="Teléfono">
+          <input type="email" class="form-control mb-3" placeholder="Email">
+          <div class="form-group">
+              <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
+          </div>
+          <button class="btn btn-primary btn-block" type="submit">Enviar</button>
+      </form>
+    </div>
+    <div class="offset-lg-3"></div>
+  </div>
+</div>
 
 
-<div class="parallax-container valign-wrapper">
+<div class="parallax-container valign-wrapper mt-5">
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
@@ -237,7 +254,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by
     </div>
   </div>
 </footer>
