Added form and fixed pop-up button

--- a/index.html
+++ b/index.html
@@ -36,39 +36,7 @@
     <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
     <div class="row center">
       <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-    </div>
-    <div class="container center-align">
-      <button type="button" data-toggle="modal" data-target="#myModal" id="download-button"
-              class="btn-large waves-effect waves-light teal lighten-1">Get Started
-      </button>
-      <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-body">
-<!--              <h4 class="modal-title" style="color: #0D47A1">Modal Header</h4>-->
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div><br>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Email address</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Example textarea</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-              </form>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
-            </div>
-            
-          </div>
-
-        </div>
-      </div>
-    </div>
+    </div>   
     <br><br>
 
   </div>
@@ -186,30 +154,60 @@
 
     <div class="row">
       <div class="col s12 center">
-        <h2><i class="mdi-content-send brown-text">Contact Us</i></h2>        
-        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        <h2><i class="mdi-content-send brown-text">Contact Us</i></h2>
+        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc
+          nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.
+          Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget,
+          bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet
+          semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim
+          mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+          Curae;</p><br>
+
+        <div class="container center-align">
+          <button type="button" data-toggle="modal" data-target="#myModal" id="download-button"
+                  class="btn-large waves-effect waves-light teal lighten-1">Contact Us!
+          </button>
+          <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-body">
+                  <!--              <h4 class="modal-title" style="color: #0D47A1">Modal Header</h4>-->
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <br>
+                <div class="modal-body">
+
+                  <div class="row my-5">
+                    <div class="offset-lg-3"></div>
+                    <div class="col-lg-6">
+                      <form class="text-center" action="#!">
+                        <input type="text" class="form-control mb-3" placeholder="Nombre">
+                        <input type="number" class="form-control mb-3" placeholder="Teléfono">
+                        <input type="email" class="form-control mb-3" placeholder="Email">
+                        <div class="form-group">
+                          <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
+                        </div>
+                        <button class="btn btn-primary btn-block" type="submit">Enviar</button>
+                      </form>
+                    </div>
+                    <div class="offset-lg-3"></div>
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
   </div>
 </div>
-<div class="container">
-  <div class="row my-5">
-    <div class="offset-lg-3"></div>
-    <div class="col-lg-6">
-      <form class="text-center" action="#!">
-          <input type="text" class="form-control mb-3" placeholder="Nombre">
-          <input type="number" class="form-control mb-3" placeholder="Teléfono">
-          <input type="email" class="form-control mb-3" placeholder="Email">
-          <div class="form-group">
-              <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
-          </div>
-          <button class="btn btn-primary btn-block" type="submit">Enviar</button>
-      </form>
-    </div>
-    <div class="offset-lg-3"></div>
-  </div>
-</div>
+
 
 
 <div class="parallax-container valign-wrapper mt-5">
