Added comment to index.html

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
           mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
           Curae;</p><br>
 
+        
+<!--    *****************EN ESTA PARTE EMPIEZA EL BOTÓN POP-UP!!!************-->        
+        
         <div class="container center-align">
           <button type="button" data-toggle="modal" data-target="#myModal" id="download-button"
                   class="btn-large waves-effect waves-light teal lighten-1">Contact Us!
