Added whatsapp button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
 
 
 </head>
@@ -29,13 +30,13 @@
   </div>
 </nav>
 
-<div id="index-banner" class="parallax-container">
+<div id="index-banner" class="parallax-container d-flex align-items-center">
 
   <div class="container">
     <br><br>
-    <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+    <h1 class="header center teal-text text-lighten-2">Bienvenidos!</h1>
     <div class="row center">
-      <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+<!--      <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>-->
     </div>   
     <br><br>
 
@@ -86,7 +87,7 @@
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+<!--        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>-->
       </div>
     </div>
   </div>
@@ -217,12 +218,16 @@
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+<!--        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>-->
       </div>
     </div>
   </div>
   <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
 </div>
+
+<a href="https://api.whatsapp.com/send?phone=5492616008655" class="float" target="_blank">
+  <i class="fa fa-whatsapp my-float"></i>
+</a>
 
 <footer class="page-footer teal">
   <div class="container">
